--- a/produto/templates/produto_list.html
+++ b/produto/templates/produto_list.html
@@ -1,16 +1,5 @@
 {% extends "base.html" %}
 
-
-{% block css %}
-    <style>
-        .ok {
-        color: green;
-        }
-        .no {
-        color: red;
-        }
-    </style>
-{% endblock css %}
 {% block content %}
 <div class="page-header">
     <h2><i class="fa fa-user">Lista de produtos</i></h2>
@@ -21,7 +10,7 @@
             <th>Importado</th>
             <th>NCM</th>
             <th>Produto</th>
-            <th>Preço</th>
+            <th class="text-center">Preço</th>
             <th class="text-center">Estoque</th>
             <th class="text-center">Estoque mínimo</th>
             <th></th>
@@ -38,7 +27,7 @@
                 {%endif%}
             </td>
             <td>{{ object.ncm }}</td>
-            <td>{{ object.produto }}</td>
+            <td><a href="{{ object.get_absolute_url }}">{{ object.produto}}</a></td>
             <td>R$ <span class="pull-right"> {{ object.preco }}</span></td>
             <td class="text-center">{{ object.estoque }}</td>
             <td class="text-center">{{ object.estoque_minimo }}</td>
