criacao formulario produtos

--- a/core/templates/base.html
+++ b/core/templates/base.html
@@ -24,6 +24,11 @@
         .no {
         color: red;
         }
+        span.required:after {
+    content: "*";
+    color: red;
+    }
+
     </style>
     {% block css %}
     {% endblock css %}
