--- a/produto/templates/produto_form.html
+++ b/produto/templates/produto_form.html
@@ -1,15 +1,12 @@
 {% extends "base.html" %}
 {% load widget_tweaks %}
+
 {% block content %}
-
-
-
-
 <form method="POST" novalidate>
     {% csrf_token %}
     {% for field in form.visible_fields %}
-    <div class="form-group{% if field.error %} has-error {%endif%}">
-        <label for="{{field.id_for_label}}">
+    <div class="form-group{% if field.errors %} has-error {% endif%}">
+        <label for="{{ field.id_for_label }}">
             {% if field.field.required %}
             <span class="required">{{ field.label }} </span>
             {% else %}
@@ -31,3 +28,4 @@
     $('#id_importado').removeClass('form-control');
 </script>
 {% endblock js %}
+
