--- a/estoque/templates/estoque_entrada_form.html
+++ b/estoque/templates/estoque_entrada_form.html
@@ -87,6 +87,10 @@
 
 <script>
   $(document).ready(function() {
+    // Insere classe no primeiro item de produto
+    $('#id_estoque-0-produto').addClass('clProduto');
+    $('#id_estoque-0-quantidade').addClass('clQuantidade');
+
     $('#add-item').click(function(ev) {
       ev.preventDefault();
       var count = $('#estoque').children().length;
@@ -101,8 +105,48 @@
       $('html, body').animate({
         scrollTop: $("#add-item").position().top - 200
       }, 800);
+
+       $('#id_estoque-' + (count) + '-produto').addClass('clProduto');
+       $('#id_estoque-' + (count) + '-quantidade').addClass('clQuantidade');
     });
   });
+
+let estoque
+let saldo
+let campo
+let campo2
+let quantidade
+
+$(document).on('change', '.clProduto', function() {
+  let self = $(this)
+  let pk = $(this).val()
+  let url = '/produto/' + pk + '/json/'
+
+
+  $.ajax({
+    url: url,
+    type: 'GET',
+    success: function(response) {
+      estoque = response.data[0].estoque
+      campo = self.attr('id').replace('produto', 'quantidade')
+      $('#'+campo).val('')
+    },
+      error: function(xhr) {
+      // body...
+    }
+  })
+});
+
+$(document).on('change', '.clQuantidade', function() {
+  quantidade = $(this).val();
+  // Aqui é feito o cálculo de soma do estoque
+  saldo = Number(quantidade) + Number(estoque);
+  campo = $(this).attr('id').replace('quantidade', 'saldo')
+  $('#'+campo).val(saldo)
+
+
+});
+
 </script>
 
 <script type="text/html" id="item-estoque">
@@ -110,6 +154,5 @@
     {{ formset.empty_form|bootstrap }}
   </div>
 </script>
-
 
 {% endblock js %}
