--- a/core/templates/base.html
+++ b/core/templates/base.html
@@ -1,3 +1,4 @@
+{% load static%}
 <!doctype html>
 <html lang="en">
 <head>
@@ -15,23 +16,7 @@
 
     <!-- Font-awesome -->
     <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/font-awesome/4.7.0/css/font-awesome.min.css">
-    <style>
-      body {
-      margin-top: 60px;
-      }
-      .ok {
-        color: green;
-        }
-        .no {
-        color: red;
-        }
-        span.required:after {
-    content: "*";
-    color: red;
-    }
-
-
-    </style>
+    <link rel="stylesheet" href="{% static 'css/style.css' %}">
     {% block css %}
     {% endblock css %}
 
