Tirando o input 'movimento' do form

--- a/produto/templates/produto_form.html
+++ b/produto/templates/produto_form.html
@@ -1,5 +1,6 @@
 {% extends "base.html" %}
 {% load widget_tweaks %}
+{% load static %}
 
 {% block content %}
 <form method="POST" novalidate>
@@ -24,8 +25,8 @@
 {% endblock content %}
 
 {% block js %}
-<script>
-    $('#id_importado').removeClass('form-control');
+<script src="{% static 'js/produto.js' %}">
+
 </script>
 {% endblock js %}
 
