--- a/core/templates/includes/nav.html
+++ b/core/templates/includes/nav.html
@@ -2,7 +2,8 @@
 
 <nav class="navbar navbar-expand-md navbar-dark bg-dark fixed-top">
     <a class="navbar-brand" href="#">Estoque</a>
-    <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarsExampleDefault" aria-controls="navbarsExampleDefault" aria-expanded="false" aria-label="Toggle navigation">
+    <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarsExampleDefault"
+            aria-controls="navbarsExampleDefault" aria-expanded="false" aria-label="Toggle navigation">
         <span class="navbar-toggler-icon"></span>
     </button>
 
@@ -16,7 +17,8 @@
             </li>
 
             <li class="nav-item dropdown">
-                <a class="nav-link dropdown-toggle" href="#" id="dropdown01" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">Estoque</a>
+                <a class="nav-link dropdown-toggle" href="#" id="dropdown01" data-toggle="dropdown" aria-haspopup="true"
+                   aria-expanded="false">Estoque</a>
                 <div class="dropdown-menu" aria-labelledby="dropdown01">
                     <a class="dropdown-item" href="{% url 'estoque:estoque_entrada_list' %}">Entrada</a>
                     <a class="dropdown-item" href="{% url 'estoque:estoque_saida_list' %}">Saída</a>
@@ -24,6 +26,14 @@
                 </div>
             </li>
         </ul>
+
+        {% if user.is_authenticated %}
+        <ul class="navbar-nav px-3">
+            <li class="nav-item text-nowrap">
+                <a href="{% url 'logout' %}" class="nav-link">Sair</a>
+            </li>
+        </ul>
+        {% endif %}
 
     </div>
 </nav>
